style.css
*{
  margin:0;
  padding:0;
  box-sizing:border-box;
  font-family:Arial,sans-serif;
}

body{
  background:#f8f9fa;
  color:#222;
  line-height:1.6;
}

/* HERO */
.hero{
  background:url("https://images.unsplash.com/photo-1544025162-d76694265947")
    center/cover no-repeat;
  min-height:70vh;
  display:flex;
  justify-content:center;
  align-items:center;
}

.overlay{
  background:rgba(0,0,0,.55);
  width:100%;
  min-height:70vh;
  display:flex;
  flex-direction:column;
  justify-content:center;
  align-items:center;
  text-align:center;
  padding:20px;
}

.overlay h1{
  color:#fff;
  font-size:34px;
  margin-bottom:10px;
}

.overlay p{
  color:#f1f1f1;
  margin-bottom:20px;
  font-size:16px;
}

/* BUTTON */
.btn,
.btn-small{
  background:#2d6a4f;
  color:#fff;
  padding:12px 22px;
  border:none;
  border-radius:12px;
  text-decoration:none;
  cursor:pointer;
  transition:.3s;
  display:inline-block;
}

.btn:hover,
.btn-small:hover{
  transform:translateY(-2px);
}

/* SECTION */
section{
  padding:55px 20px;
  text-align:center;
}

section h2{
  font-size:28px;
  margin-bottom:14px;
  color:#2d6a4f;
}

/* GRID */
.grid{
  display:grid;
  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
  gap:20px;
  margin-top:30px;
}

/* CARD */
.card{
  background:#fff;
  padding:22px;
  border-radius:18px;
  box-shadow:0 4px 14px rgba(0,0,0,.08);
  transition:.3s;
}

.card:hover{
  transform:translateY(-5px);
}

.card h3{
  margin-bottom:10px;
  color:#2d6a4f;
}

.card span{
  font-size:18px;
  font-weight:bold;
  display:block;
  margin:10px 0;
}

/* INPUT */
input{
  width:100%;
  padding:12px;
  margin-bottom:12px;
  border:1px solid #ddd;
  border-radius:10px;
  outline:none;
}

/* TESTIMONI */
.testimoni{
  background:#eef7f1;
}

/* BUSINESS */
.business{
  background:#fff;
}

/* FOOTER */
footer{
  background:#2d6a4f;
  color:#fff;
  text-align:center;
  padding:20px;
  font-size:14px;
}

/* RESPONSIVE */
@media(max-width:768px){
  .overlay h1{
    font-size:28px;
  }

  section h2{
    font-size:24px;
  }

  .card{
    padding:18px;
  }
}

.cart{
  padding: 50px 20px;
  text-align: center;
  background: #eef7f1;
}

#cart-list{
  margin: 20px auto;
  max-width: 500px;
  display: grid;
  gap: 12px;
}

#total{
  margin: 20px 0;
  font-size: 24px;
  color: #2d6a4f;
}
.qty-btn{
  background:#2d6a4f;
  color:#fff;
  border:none;
  padding:8px 14px;
  margin:6px;
  border-radius:8px;
  font-size:20px;
  cursor:pointer;
}

.qty-btn:hover{
  transform:scale(1.05);
}
#cart-count{
  background:#2d6a4f;
  color:#fff;
  padding:6px 12px;
  border-radius:20px;
  font-size:16px;
  margin-left:10px;
}

